<resources>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your phone."</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Video camera</string>
    <string name="wait">Hang on…</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">SD card is full</string>
    <string name="preparing_sd">Checking SD card…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Restore Camera default settings?</string>
    <string name="confirm_change_mode_title">Switch mode</string>
    <string name="confirm_change_to_expert_mode_message">Switch to advanced mode?</string>
    <string name="confirm_change_to_simple_mode_message">Switch to simple mode?</string>
    <string name="confirm_location_message">Do you want to save location info in your photos?</string>
    <string name="save">Save</string>
    <string name="no_save">"Don't save"</string>
    <string name="review_cancel">CANCEL</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_sound_default">true</string>
    <string name="pref_camera_auto_focus_title_entry_off">Off</string>
    <string name="pref_camera_auto_focus_title_entry_on">On</string>
    <string name="pref_captrue_mirror_title">Front camera</string>
    <string name="pref_captrue_mirror_default">true</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_4kuhd">4K</string>
    <string name="pref_video_quality_entry_1080p">FULL HD</string>
    <string name="pref_video_quality_entry_720p">HD</string>
    <string name="pref_video_quality_entry_480p">SD</string>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">.06 seconds (2 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">.12 seconds (4 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">.3 seconds (10 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">1 second (30 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">2 seconds (60 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">3 seconds (90 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">4 seconds (120 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">5 seconds (150 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">8 seconds (240 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">10 seconds (300 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">15 seconds (450 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">30 seconds (900 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">60 seconds (1800 times)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_picturesize_entry_standard">Standard 4:3</string>
    <string name="pref_camera_picturesize_entry_fullscreen">Full screen 16:9</string>
    <string name="pref_camera_picturesize_entry_4208x3120">13M(4208x3120)</string>
    <string name="pref_camera_picturesize_entry_4208x2368">10M(4208x2368)</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M(3264x2448)</string>
    <string name="pref_camera_picturesize_entry_3200x2400">8M(3200x2400)</string>
    <string name="pref_camera_picturesize_entry_3328x1872">6M(3328x1872)</string>
    <string name="pref_camera_picturesize_entry_3264x1840">6M(3264x1840)</string>
    <string name="pref_camera_picturesize_entry_3200x1800">6M(3200x1800)</string>
    <string name="pref_camera_picturesize_entry_3264x1836">6M(3264x1836)</string>
    <string name="pref_camera_picturesize_entry_2592x1936">5M(2592x1936)</string>
    <string name="pref_camera_picturesize_entry_2592x1456">4M(2592x1456)</string>
    <string name="pref_camera_picturesize_entry_2592x1944">5M(2592x1944)</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M(2048x1536)</string>
    <string name="pref_camera_picturesize_entry_1920x1088">2M(1920x1088)</string>
    <string name="pref_camera_picturesize_entry_1920x1080">2M(1920x1080)</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M(1600x1200)</string>
    <string name="pref_camera_picturesize_entry_1472x1104">1.6M(1472x1104)</string>
    <string name="pref_camera_picturesize_entry_1440x1080">1.6M(1440x1080)</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3M(1280x960)</string>
    <string name="pref_camera_picturesize_entry_1440x816">1.2M(1440x816)</string>
    <string name="pref_camera_picturesize_entry_1472x832">1.2M(1472x832)</string>
    <string name="pref_camera_picturesize_entry_1280x720">0.9M(1280x720)</string>
    <string name="pref_camera_picturesize_entry_1024x768">0.8M(1024x768)</string>
    <string name="pref_camera_jpegquality_default">normal</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_picture_format_title">Select picture format</string>
    <string name="pref_camera_picture_format_entry_jpeg">Jpeg</string>
    <string name="pref_camera_picture_format_entry_raw">Raw</string>
    <string name="pref_camera_picture_format_value_jpeg">jpeg</string>
    <string name="pref_camera_picture_format_value_raw">raw</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_high">High</string>
    <string name="pref_camera_jpegquality_entry_normal">Standard</string>
    <string name="pref_camera_jpegquality_entry_low">Low</string>
    <string name="pref_camera_histogram_default">disable</string>
    <string name="pref_camera_histogram_title">Histogram</string>
    <string name="pref_camera_histogram_entry_enable">Enable</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_value_default">continuous-picture</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_shader_coloreffect_default">normal</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_contrast_default">5</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_default">5</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_sharpness_default">12</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">Select ISO</string>
    <string name="pref_camera_antibanding_title">Anti banding</string>
    <string name="pref_camera_antibanding_default">50hz</string>
    <string name="pref_camera_panoramamode_title">Panorama</string>
    <string name="pref_camera_autoexposure_title">Auto exposure settings</string>
    <string name="pref_camera_autoexposure_default">center-weighted</string>
    <string name="pref_camera_audio_capture_title">Audio</string>
    <string name="pref_camera_facedetection_default">true</string>
    <string name="pref_camera_facedetection_title">Face detection</string>
    <string name="pref_camera_ae_bracket_hdr_title">HDR</string>
    <string name="pref_camera_hand_night_title">HHT</string>
    <string name="pref_grp_picture_settings">Picture settings</string>
    <string name="pref_grp_capture_settings">Capture settings</string>
    <string name="pref_grp_advanced_settings">Advanced settings</string>
    <string name="pref_grp_restore_settings">Restore settings</string>
    <string name="pref_camera_settings_title">Settings</string>
    <string name="pref_camera_referenceline_title">Reference line</string>
    <string name="pref_camera_referenceline_entryvalue_default">false</string>
    <string name="pref_camera_volumekey_function_title">Volume button functions</string>
    <string name="pref_camera_volumekey_function_default">shutter</string>
    <string name="pref_camera_long_pressing_burst_shooting_title">Long press Shutter button</string>
    <string name="pref_camera_long_pressing_burst_shooting_default">on</string>
    <string name="pref_long_press_shutter_button_focus_title">Long press Shutter button to focus</string>
    <string name="pref_burst_shoot_title">Burst shoot</string>
    <string name="simple_mode_title">Simple mode</string>
    <string name="pref_settings_mode">Camera mode</string>
    <string name="pref_camera_watermark_title">Time watermark</string>
    <string name="pref_camera_watermark_default">false</string>
    <string name="pref_camera_hdr_title">HDR</string>
    <string name="pref_setting_title">Settings</string>
    <string name="pref_scan_qrcode_title">Scan QR code</string>
    <string name="pref_scan_qrcode_default">true</string>
    <string name="pref_manual_exposure_title">Manual exposure</string>
    <string name="face_beauty_intelligent_title">Auto adjust</string>
    <string name="face_beauty_simple_mode_title">Skin tones</string>
    <string name="camera_face_beauty_default">i:0</string>
    <string name="camera_face_beauty_simple_mode_open">i:2</string>
    <string name="pref_camera_show_gender_age_title">Face recognition</string>
    <string name="pref_camera_show_gender_age_default">on</string>
    <string name="pref_camera_multiple_face_beauty_title">Enhance skin tones</string>
    <string name="pref_camera_multiple_face_beauty_values_off">off</string>
    <string name="pref_camera_ubi_focus_title">Refocus</string>
    <string name="pref_camera_auto_chroma_flash_title">Chroma Flash</string>
    <string name="pref_camera_auto_capture_when_stable_title">Auto-capture when stable</string>
    <string name="pref_camera_countdown_title">Count down</string>
    <string name="pref_priority_storage_title">Save to external SD card</string>
</resources>