<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.camera">
    <IconListPreference camera:title="@string/pref_camera_panoramamode_title" camera:key="pref_camera_panoramamode_key" camera:singleIcon="@drawable/bg_indicator_panorama" />
    <IconListPreference camera:title="@string/pref_camera_hdr_title" camera:key="pref_camera_ae_bracket_hdr_key" camera:singleIcon="@drawable/bg_indicator_hdr" />
    <IconListPreference camera:title="@string/pref_camera_ubi_focus_title" camera:key="pref_camera_ubi_focus_key" camera:singleIcon="@drawable/bg_indicator_ubi_focus" />
    <IconListPreference camera:title="@string/pref_camera_hand_night_title" camera:key="pref_camera_hand_night_key" camera:singleIcon="@drawable/bg_indicator_hand_night" />
    <IconListPreference camera:title="@string/pref_camera_audio_capture_title" camera:key="pref_audio_capture" camera:singleIcon="@drawable/bg_indicator_audio_capture" />
    <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_shader_coloreffect_key" camera:defaultValue="@string/pref_camera_shader_coloreffect_default" camera:singleIcon="@drawable/bg_indicator_coloreffect" />
    <IconListPreference camera:title="@string/pref_burst_shoot_title" camera:key="pref_camera_burst_shooting_key" camera:singleIcon="@drawable/bg_indicator_burst_shoot" />
    <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" camera:singleIcon="@drawable/bg_indicator_coloreffect" camera:largeIcons="@array/camera_coloreffect_largeIcons" />
    <IconListPreference camera:title="@string/face_beauty_intelligent_title" camera:key="pref_camera_face_beauty_key" camera:defaultValue="@string/camera_face_beauty_default" camera:entryValues="@array/camera_face_beauty_entryvalues" camera:singleIcon="@drawable/bg_indicator_face_beauty" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:icons="@array/exposure_icons" camera:singleIcon="@drawable/bg_indicator_exposure" />
    <IconListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_qc_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_frontcamera_iso_entryvalues" camera:entries="@array/pref_frontcamera_iso_entries" camera:icons="@array/frontcamera_iso_icons" camera:singleIcon="@drawable/bg_indicator_iso" />
    <IconListPreference camera:title="@string/pref_manual_exposure_title" camera:key="pref_qc_camera_manual_exposure_key" camera:singleIcon="@drawable/bg_indicator_manual_exposure" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/camera_whitebalance_icons" camera:singleIcon="@drawable/bg_indicator_whitebalance" />
    <IconListPreference camera:title="@string/pref_camera_focusmode_title" camera:key="pref_camera_focus_mode_key" camera:defaultValue="@string/pref_camera_focusmode_value_default" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" camera:icons="@array/camera_focusmode_icons" camera:singleIcon="@drawable/bg_indicator_focusmode" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:singleIcon="@drawable/bg_indicator_scenemode" camera:largeIcons="@array/camera_scenemode_largeicons" />
    <IconListPreference camera:title="@string/pref_setting_title" camera:key="pref_settings" camera:singleIcon="@drawable/bg_indicator_setting" />
    <IconListPreference camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" />
</PreferenceGroup>